--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "crudserver",
   "version": "1.0.0",
-  "main": "server-mini-express.js",
+  "main": "server-express.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "express": "^5.1.0"
+  }
 }
